Added recipe view

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Recipes#index</h1>
-<p>Find me in app/views/recipes/index.html.erb</p>
+<h1>Recipes for chocolate - <%= @search %></h1>
+<% if (@recipes.nil? || @recipes == []) %>
+<p> <h2>No recipes found.. Sorry</h2></p>
+
+<% else %>
+
+<table border="1">
+<tr>
+<th>Photo</th>
+<th>Title</th>
+<th>Ingredients</th>
+</tr>
+<% @recipes.each do |recipe| %>
+<tr class=<%= cycle('even', 'odd') %>>
+<td><%= link_to image_tag(recipe["thumbnail"], height: '100', width: '100'), recipe["source_url"]%></td>
+<td><%= link_to sanitize(recipe["title"]), recipe["source_url"] %></td>
+<td><%= recipe["ingredients"] %></td>
+</tr>
+<% end %>
+</table>
+<% end %>
